Fix iPhone horizontal scrolling bug

--- a/_sass/inversion/_commons.scss
+++ b/_sass/inversion/_commons.scss
@@ -1,5 +1,6 @@
 html {
-  width: 100%;
+  width: 100% !important;
+  overflow-x: 100% !important;
   color: $--base-fg-color;
   background-color: $--base-bg-color;
   font-family: 'Pretendard', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -13,7 +14,6 @@ html {
 body {
   position: relative;
   width: 100%;
-  min-width: 400px;
   line-height: 1.6;
 }
 
@@ -54,10 +54,14 @@ pre {
   font-family: 'D2Coding', 'Courier New', Courier, monospace;
 }
 
+main {
+  box-sizing: border-box;
+}
+
 article {
   max-width: 720px;
   min-height: 70vh;
-  margin: auto;
+  margin: 0 auto;
   margin-top: 2em;
   margin-bottom: 2em;
   padding: 0 1.5em;
